--- a/dev/Styles/_BootstrapFix.less
+++ b/dev/Styles/_BootstrapFix.less
@@ -10,7 +10,7 @@ summary.legend {
 }
 
 .btn.btn-thin {
-	padding: 4px 9px;
+	padding: 0 9px;
 }
 
 .alert a:not(.close) {
